# pcjr-asm-game

./: .gitignore  320x200x16.asm  BLOG.txt  MEMDUMP.TXT  Makefile  README.md  TODO.md  dosbox.conf  episode plan.md  episode plan.txt  formatting.asm  fosquest.asm  graphics.mac  input.asm  inspect.asm  notes-for-blog.txt  notes.txt  pcjr-asm-game.code-workspace  renderer.asm  stdio.mac  test-future.asm  test.asm  test.lst
assets/: cube.rsc  cube.vec  depthtst.vec  room1.rsc  room1.vec  testfill.rsc  testfill.vec
assets/icon/: player.xcf
assets/room1/: room1.xcf
capture/: test_000.avi
fosquesttools/: pyproject.toml  sound.py
pageregisters/: Makefile  pagereg.asm
process-room/: process-room.py  process.bat  pyproject.toml
process_room/: process_room.py  pyproject.toml
room1/: room1.xcf
scratchpad/: MEMDUMP-fronttree.TXT  memdump-castle.txt  memdump-garden.txt
snippets/: snippet-blt-and-allocate.txt  snippet-drawplayer.txt  snippet-efficient-blt-rect
sound/: Makefile  amongus.mid  amongus.snd  birdchrp.mid  birdchrp.snd  mid2snd.py  sound.asm  test.mid
src/: fosquest.asm  input.asm  main.asm  sound.asm
std/: 320x200x16.asm  kbd_state.asm  stdio.asm  stdio.mac  stdio.mac.asm  stdlib.asm  video.asm
templates/: cga16color.gpl
tmp/: make.bat
tools/: Dosbox-Snapshot.dmg  JMODEM.BAS  MTCP.CFG  RXBIN.BAS  build-jrecv.bat  build-jrecv.sh  build-nc.sh  client-test.bat  client-test.sh  extractimage.py  jmodem-tx.py  jsend.py  prepareImage.py  recvfile.bas  sanitycheck.py  server-test.bat  server-test.sh  tcpserver.py  txbin.py  viewmem.py
(+34 files in other folders)
